# cx_matrix

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
.travis/: build.sh  install.sh  os_setup.sh
Source/: CMakeLists.txt  control_unit.hpp  cx_functions.hpp  cx_loops.hpp  cx_math.h  cx_random.hpp  iterations_methods.hpp  lu_decomposition.hpp  lup_decomposition.hpp  lupq_decomposition.hpp  main.cpp  matrix.hpp  qr_decomposition.hpp  utils.hpp
Source/cx_math/: cx_math.h
Source/cx_matrix/: CMakeLists.txt  cx_matrix.hpp
Source/cx_options/: cx_algorthms.hpp  cx_loops.hpp  cx_random.hpp
